# jitacli

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  shopping_list
jitacli/: get_swagger.py  main.py  research.py  shopping_list
tests/: test_jitacli.py
