[tool.poetry]
name = "jitacli"
version = "0.0.1"
description = ""
authors = ["sapporojones <sapporojones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
tqdm = "^4.56.0"
rich = "^9.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
